# MQTTClient

./: .gitignore  MQTTClient.py  README.md  about.py  config_file.ini  config_file.py  configfile.ini  del.py  del2.py  del3.py  dene.py  dist.txt  icon.icns  main.py  main_window_frame_ui.py  mqtt_publish.py  new_connect.py  new_topic.py  open_connect.py  pyproject.toml  requirements.txt  search.py  setup.py  subscriber.py  test_mqtt_publish.py  test_mqtt_subscribe.py  ui_frame.py
hooks/: config_file.ini
output/MQTTClient/: config_file.py  configfile.ini  main_window_frame_ui.py  open_connect.py  subscriber.py
pygubu/: about.ui  grid.ui  place.ui  pygubu.ui  test.ui  test2.ui
